[tool.poetry]
name = "pytorch-align"
version = "0.1.0"
description = ""
authors = ["Rajat Nigam <rajatnigam89@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4.67.0"
datasets = "^3.1.0"
transformers = "^4.46.2"
wandb = "^0.18.7"
jupyter = "^1.1.1"
torch = "^2.5.1"
ipdb = "^0.13.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
